# BaselineML

./: LICENSE  README.md  pyproject.toml  train.py
baseline/: data.py  featurizer.py  featurizers.py  models.py  splits.py  utils.py
data/: biogen_solubility.csv
deep-learning-for-molecules-materials-exercises/: READMD.md  exercises-1.ipynb  exercises-2.ipynb
notebooks/: build_baseline_ffn.ipynb  build_baseline_k_nearest_neighbor.ipynb  build_baseline_linear_model.ipynb  build_baseline_linear_model_mordred.ipynb  gaussian_mixture_model_from_scratch.ipynb  gaussian_process_from_scratch.ipynb  make_cluster_splits.ipynb  utils.py
